<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.akarazhev.cryptoscout</groupId>
    <artifactId>crypto-scout-collector</artifactId>
    <version>0.0.1</version>
    <packaging>jar</packaging>
    <name>crypto-scout-collector</name>
    <description>Crypto Scout Collector</description>
    <url/>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Andrey Karazhev</name>
            <email>karazhev@gmail.com</email>
        </developer>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.plugin.version>3.14.1</maven.compiler.plugin.version>
        <maven.shade.plugin.version>3.6.1</maven.shade.plugin.version>
        <jcryptolib.version>0.0.3</jcryptolib.version>
        <crypto-scout-test.version>0.0.1</crypto-scout-test.version>
        <activej.version>6.0-rc2</activej.version>
        <amqp-client.version>5.26.0</amqp-client.version>
        <stream-client.version>1.4.0</stream-client.version>
        <postgresql.version>42.7.8</postgresql.version>
        <hikari.version>7.0.2</hikari.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.github.akarazhev.jcryptolib</groupId>
            <artifactId>jcryptolib</artifactId>
            <version>${jcryptolib.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.activej/activej-servicegraph -->
        <dependency>
            <groupId>io.activej</groupId>
            <artifactId>activej-servicegraph</artifactId>
            <version>${activej.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.activej/activej-jmx -->
        <dependency>
            <groupId>io.activej</groupId>
            <artifactId>activej-jmx</artifactId>
            <version>${activej.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.activej/activej-datastream -->
        <dependency>
            <groupId>io.activej</groupId>
            <artifactId>activej-datastream</artifactId>
            <version>${activej.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.rabbitmq/stream-client -->
        <dependency>
            <groupId>com.rabbitmq</groupId>
            <artifactId>stream-client</artifactId>
            <version>${stream-client.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
        <dependency>
            <groupId>com.rabbitmq</groupId>
            <artifactId>amqp-client</artifactId>
            <version>${amqp-client.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>${hikari.version}</version>
        </dependency>
        <!-- Test dependencies -->
        <dependency>
            <groupId>com.github.akarazhev.cryptoscout</groupId>
            <artifactId>crypto-scout-test</artifactId>
            <version>${crypto-scout-test.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!-- Compiler plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <!-- Shade plugin to build fat JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven.shade.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.github.akarazhev.cryptoscout.Collector</mainClass>
                                </transformer>
                            </transformers>
                            <createDependencyReducedPom>true</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
